# Ramadhan-Code-Fest-2026

./: .gitmodules
Choice-Maker-Web/src/: App.tsx
Choice-Maker-Web/src/components/layout/: HomePage.tsx  QuizPage.tsx  ResultPage.tsx
Choice-Maker-Web/src/components/ui/: QuizCard.tsx
Choice-Maker-Web/src/hooks/: useDecision.ts
Choice-Maker-Web/src/questions/: decisionQuestions.ts
backend-scheduler/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
backend-scheduler/migrations/: 20251209003438_users_table.up.sql  20251220043446_fetch_api.up.sql  20260103124730_apalis_setup.up.sql  20260121003612_user_api_keys.up.sql  MIGRATE.md
backend-scheduler/src/: lib.rs  main.rs  state.rs
backend-scheduler/src/config/: mod.rs
backend-scheduler/src/db/: postgres.rs
backend-scheduler/src/handlers/: auth.rs  fetch.rs  user.rs
backend-scheduler/src/jobs/: cleaner.rs  mod.rs  rest.rs  websocket.rs  workers.rs
backend-scheduler/src/middleware/: auth.rs
backend-scheduler/src/models/: auth.rs  fetch.rs  mod.rs  user.rs
backend-scheduler/src/repository/: apikey.rs  fetch.rs  mod.rs  token.rs  user.rs
backend-scheduler/src/routes/: auth.rs  fetch.rs  home.rs  mod.rs  user.rs
backend-scheduler/src/services/: auth.rs  fetch.rs  user.rs
backend-scheduler/src/utils/: auth.rs  hash.rs  mod.rs  requests.rs  reqwest.rs  response.rs
backend-scheduler/tests/: error_response.rs  gen.rs  resource.rs
sin-calculator/src/: App.jsx
sin-calculator/src/components/: FintechSection.jsx  HistoryLog.jsx
