[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[features]
default = ["full"]
full = ["api", "worker", "auth", "messaging", "client"]

# Modular Features
api = ["dep:axum", "dep:tower-http"]
worker = ["dep:apalis", "dep:apalis-sql"]
auth = ["dep:argon2", "dep:password-hash", "dep:jsonwebtoken"]
messaging = ["dep:tokio-tungstenite", "dep:rumqttc"]
client = ["dep:reqwest"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4","v7", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1.0.100"
rand = "0.8"
futures-util = "0.3"
sysinfo = "0.30"

# API Layer (Axum & Tower)
axum = { version = "0.8.7", features = ["macros"], optional = true }
tower-http = { version = "0.6", features = ["trace" , "cors", "compression-gzip"], optional = true }

# Worker / Job Queue Layer
apalis = { version = "0.7", features = ["limit", "retry"], optional = true }
apalis-sql = { version = "0.7", features = ["postgres", "migrate"], optional = true }

# Auth & Crypto Layer
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true }
jsonwebtoken = { version = "10", features = ["rust_crypto"], optional = true }

# Messaging Layer (MQTT & WebSocket)
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }
rumqttc = { version = "0.25", optional = true }

# HTTP Client
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
axum-test = "18.2.1"